2006-08-18  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (internal_pad_finalizing),
	(control_internal_pad):
	Free internal pad private data when the pad is being finalized, else
	we leak that structure.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c:
	(gnl_composition_ghost_pad_set_target):
	Properly handle ghostpads without targets.
	(convert_list_to_tree), (compare_relink_single_node),
	(compare_deactivate_single_node), (update_pipeline):
	First integration of support for GnlOperations.
	(gnl_composition_add_object):
	If composition was empty and initialized, update pipeline.


2006-08-09  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c:
	Remove useless linkfunc/unlinkfunc from GnlPadPrivate structure.
	(control_internal_pad),
	Remove call to useless functions. 
	(gnl_object_ghost_pad_no_target),
	(gnl_object_ghost_pad_set_target):
	* gnl/gnloperation.c: (gnl_operation_class_init),
	(element_is_valid_filter), (gnl_operation_add_element),
	(gnl_operation_set_sinks), (get_unused_static_sink_pad),
	(add_sink_pad), (gnl_operation_request_new_pad),
	(gnl_operation_release_pad):
	Implemented GstElement::request_new_pad virtual method.
	Improved sink ghost pads synchronisation with the nbsinks property.
	* gnl/gnloperation.h:
	Added comments.

2006-07-27  Edward Hervey  <edward@fluendo.com>

	* gnl/gnl.c:
	Let's welcome GnlOperation back in the game.
	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_dispose), (gnl_composition_finalize),
	(gnl_composition_reset), (segment_done_main_thread),
	(gnl_composition_handle_message), (get_new_seek_event),
	(seek_handling), (pad_blocked),
	(gnl_composition_ghost_pad_set_target),
	(next_stop_in_region_above_priority), (convert_list_to_tree),
	(get_stack_list), (get_clean_toplevel_stack),
	(gnl_composition_change_state), (update_start_stop_duration),
	(no_more_pads_object_cb), (compare_relink_single_node),
	(compare_deactivate_single_node), (compare_relink_stack),